0.6

   -  Rust 1.60 or later is now required to build this package.
   -  From<Rational> and From<SRational> implementations for f32 and f64
      have been removed.  Use Rational::to_f64 and so on.

0.5.5 (2022-10-22)

   -  `Value::as_uint` and `Error::UnexpectedValue` have been added.

0.5.4 (2021-03-26)

   -  WebP format support has been added.

0.5.3 (2021-01-05)

   -  An infinite loop in reading PNG files has been fixed.
   -  PNG reader now handles `std::io::ErrorKind::Interrupted` correctly.

0.5.2 (2020-08-07)

   -  PNG format support has been added.
   -  DCF (Design rule for Camera File system) 2.0 tags have been added.

0.5.1 (2020-02-15)

   -  Exif 2.32 tags have been added.

0.5 (2020-01-26)

   -  Support for HEIF has been added.
   -  `Exif` has been separated from `Reader`.
   -  `Error::description` has been removed because it has been
      soft-deprecated.

0.4 (2019-12-22)

   -  Support for displaying values with units has been added.
   -  Rust 1.40 or later is required.
   -  The deprecated `tag` module has been removed.
   -  Support for reading up to 8 IFDs has been added.
   -  Enums `Context` and `Error` are now non_exhaustive.
   -  `Value` and `Field` no longer borrows the raw buffer.
   -  Struct `In` has been added to indicate primary/thumbnail images.
   -  `Reader::fields` now returns an iterator.
   -  The associated value of `Value::Undefined` and `Value::Ascii` has been
      changed from a slice to a `Vec`.

0.3.1 (2018-06-17)

   -  IFDs other than 0th and 1st are ignored for now.

0.3 (2017-10-22)

   -  Enum `Error` now has two new variants: `TooBig` and `NotSupported`.
   -  `Value::Undefined` now has the 2nd member to keep the offset of the
      value.
   -  Struct `DateTime` now has two new fields: `nanosecond` and
      `time_offset`.
   -  The tag constants have been changed to associated constants of
      struct `Tag`.  Use `Tag::TagName` instead of `tag::TagName`.

0.2.3 (2017-07-16)
