@@ -41,8 +41,23 @@ fn main() {
 
 fn dump_file(path: &Path) -> Result<(), exif::Error> {
     let file = File::open(path)?;
-    let exif = exif::Reader::new().read_from_container(
-        &mut BufReader::new(&file))?;
+
+    // To parse strictly:
+    // let exif = exif::Reader::new()
+    //     .read_from_container(&mut BufReader::new(&file))?;
+
+    // To parse with continue-on-error mode:
+    let result = exif::Reader::new()
+        .continue_on_error(true)
+        .read_from_container(&mut BufReader::new(&file));
+    let exif = if let Err(exif::Error::PartialResult(partial)) = result {
+        let (exif, errors) = partial.into_inner();
+        eprintln!("{}: {} warning(s)", path.display(), errors.len());
+        errors.iter().for_each(|e| eprintln!("  {}", e));
+        exif
+    } else {
+        result?
+    };
 
     println!("{}", path.display());
     for f in exif.fields() {
